MDEV-18240 Assertion `0' failed in Item_cache_timestamp::val_datetime_packed